war/app/css/gdg.css
body {
    overflow-y: scroll;
    color: #424242;
    font-family: 'Roboto', sans-serif;
    line-height: 24px;
    letter-spacing: -0.01em;
}
.gdg_loading {
    background: url('/app/images/gdg_loading.gif') no-repeat 0 0 rgb(255, 255, 255);
    width: 64px;
    height: 64px;
}
md-tabs .md-header {
    border-bottom: 1px solid #D8D8D8;
}
.fill {
    width: 100%;
    height: 100%;
    background-size: cover;
}
.socialIcon {
    margin: 8px;
}
.png-icon {
    background-repeat: no-repeat no-repeat;
    display: inline-block;
    vertical-align: middle;
    height: 26px;
    width: 26px;
    font-size: 1.33333333em;
    line-height: .75em;
    margin: 8px;
}
.gdg-icon {
    height: 24px;
    width: 24px;
}
.invert {
    -webkit-filter: invert(100%);
}
.grayscale {
    -webkit-filter: grayscale(100%);
}
.navTabs md-tab-item {
    padding: 0;
}
.navTabLink {
    padding: 12px 24px;
    text-decoration: none;
    color: inherit;
    display: flex;
    flex-direction: column;
}
.navTabLink:hover {
    text-decoration: none;
}
span.md-font.fa {
    font-size: 1.33333333em;
}
md-grid-list {
    margin: 8px;
}
md-grid-tile.gray {
    background: #f5f5f5;
}
md-grid-tile.green {
    background: #b9f6ca;
}
md-grid-tile.yellow {
    background: #ffff8d;
}
md-grid-tile.blue {
    background: #84ffff;
}
md-grid-tile.darkBlue {
    background: #80d8ff;
}
md-grid-tile.deepBlue {
    background: #448aff;
}
md-grid-tile.purple {
    background: #b388ff;
}
md-grid-tile.lightPurple {
    background: #8c9eff;
}
md-grid-tile.red {
    background: #ff8a80;
}
md-grid-tile.pink {
    background: #ff80ab;
}
md-grid-tile {
    transition: all 400ms ease-out 50ms;
}
.activityIcon {
    height: 120px;
    width: 120px;
}
md-toolbar.md-default-theme {
    border-top-right-radius: 3px;
    border-top-left-radius: 3px;
}
md-toolbar .md-toolbar-tools h2 {
    font-weight: 700;
}
md-card.md-default-theme,
md-grid-list md-grid-tile {
    border-radius: 3px;
}
md-card-content div[layout] {
    border-bottom: 1px solid #E0E0E0;
}
md-grid-list md-grid-tile md-grid-tile-footer {
    background: rgba(0, 0, 0, 0.3);
}
md-grid-list md-grid-tile md-grid-tile-footer figcaption {
    width: 100%;
}
md-grid-list md-grid-tile md-grid-tile-footer h3 {
    margin: 0;
    font-weight: 700;
    width: 100%;
    text-align: center;
}
md-card > img {
    border-radius: 3px;
}
md-card a {
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    line-height: 1;
    letter-spacing: 0.01em;
    white-space: nowrap;
    color: #1565C0;
    text-decoration: initial;
}
a:hover {
    text-decoration: underline;
}

